A5/a5v1/prepos.output
Grammar

    0 $accept: input $end

    1 input: %empty
    2      | input line

    3 line: '\n'
    4     | expression '\n'

    5 expression: '+' expression expression
    6           | '*' expression expression
    7           | '-' expression expression
    8           | '/' expression expression
    9           | factor

   10 factor: NUMBER


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 3 4
'*' (42) 6
'+' (43) 5
'-' (45) 7
'/' (47) 8
error (256)
NUMBER (258) 10


Nonterminals, with rules where they appear

$accept (9)
    on left: 0
input (10)
    on left: 1 2, on right: 0 2
line (11)
    on left: 3 4, on right: 2
expression (12)
    on left: 5 6 7 8 9, on right: 4 5 6 7 8
factor (13)
    on left: 10, on right: 9


State 0

    0 $accept: . input $end

    $default  reduce using rule 1 (input)

    input  go to state 1


State 1

    0 $accept: input . $end
    2 input: input . line

    $end    shift, and go to state 2
    NUMBER  shift, and go to state 3
    '\n'    shift, and go to state 4
    '+'     shift, and go to state 5
    '*'     shift, and go to state 6
    '-'     shift, and go to state 7
    '/'     shift, and go to state 8

    line        go to state 9
    expression  go to state 10
    factor      go to state 11


State 2

    0 $accept: input $end .

    $default  accept


State 3

   10 factor: NUMBER .

    $default  reduce using rule 10 (factor)


State 4

    3 line: '\n' .

    $default  reduce using rule 3 (line)


State 5

    5 expression: '+' . expression expression

    NUMBER  shift, and go to state 3
    '+'     shift, and go to state 5
    '*'     shift, and go to state 6
    '-'     shift, and go to state 7
    '/'     shift, and go to state 8

    expression  go to state 12
    factor      go to state 11


State 6

    6 expression: '*' . expression expression

    NUMBER  shift, and go to state 3
    '+'     shift, and go to state 5
    '*'     shift, and go to state 6
    '-'     shift, and go to state 7
    '/'     shift, and go to state 8

    expression  go to state 13
    factor      go to state 11


State 7

    7 expression: '-' . expression expression

    NUMBER  shift, and go to state 3
    '+'     shift, and go to state 5
    '*'     shift, and go to state 6
    '-'     shift, and go to state 7
    '/'     shift, and go to state 8

    expression  go to state 14
    factor      go to state 11


State 8

    8 expression: '/' . expression expression

    NUMBER  shift, and go to state 3
    '+'     shift, and go to state 5
    '*'     shift, and go to state 6
    '-'     shift, and go to state 7
    '/'     shift, and go to state 8

    expression  go to state 15
    factor      go to state 11


State 9

    2 input: input line .

    $default  reduce using rule 2 (input)


State 10

    4 line: expression . '\n'

    '\n'  shift, and go to state 16


State 11

    9 expression: factor .

    $default  reduce using rule 9 (expression)


State 12

    5 expression: '+' expression . expression

    NUMBER  shift, and go to state 3
    '+'     shift, and go to state 5
    '*'     shift, and go to state 6
    '-'     shift, and go to state 7
    '/'     shift, and go to state 8

    expression  go to state 17
    factor      go to state 11


State 13

    6 expression: '*' expression . expression

    NUMBER  shift, and go to state 3
    '+'     shift, and go to state 5
    '*'     shift, and go to state 6
    '-'     shift, and go to state 7
    '/'     shift, and go to state 8

    expression  go to state 18
    factor      go to state 11


State 14

    7 expression: '-' expression . expression

    NUMBER  shift, and go to state 3
    '+'     shift, and go to state 5
    '*'     shift, and go to state 6
    '-'     shift, and go to state 7
    '/'     shift, and go to state 8

    expression  go to state 19
    factor      go to state 11


State 15

    8 expression: '/' expression . expression

    NUMBER  shift, and go to state 3
    '+'     shift, and go to state 5
    '*'     shift, and go to state 6
    '-'     shift, and go to state 7
    '/'     shift, and go to state 8

    expression  go to state 20
    factor      go to state 11


State 16

    4 line: expression '\n' .

    $default  reduce using rule 4 (line)


State 17

    5 expression: '+' expression expression .

    $default  reduce using rule 5 (expression)


State 18

    6 expression: '*' expression expression .

    $default  reduce using rule 6 (expression)


State 19

    7 expression: '-' expression expression .

    $default  reduce using rule 7 (expression)


State 20

    8 expression: '/' expression expression .

    $default  reduce using rule 8 (expression)
